RUN AND EAT 2.0 (mejoras, cambios, figma,...)

--- a/crear.html
+++ b/crear.html
@@ -20,7 +20,7 @@
 
             <div class="crear-header-buttons">
                 <a href="index.html" class="crear-btn-header">INICIO</a>
-                <a href="eventos.html" class="crear-btn-header">EVENTOS</a>
+                <a href="dashboard.html" class="crear-btn-header">EVENTOS</a>
             </div>
         </div>
 
