--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </a>
 
             <nav class="nav-buttons">
-                <a href="eventos.html " class="btn-nav">EVENTOS</a>
+                <a href="dashboard.html" class="btn-nav">EVENTOS</a>
                 <a href="contacto.html " class="btn-nav">CONTACTO</a>
             </nav>
         </div>
