--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <div class="login-top">
         <div class="login-buttons-group">
             <a href="index.html" class="login-top-btn">INICIO</a>
-            <a href="eventos.html" class="login-top-btn">EVENTOS</a>
+            <a href="dashboard.html" class="login-top-btn">EVENTOS</a>
             <div class="login-register-container">
                 <a href="registrer.html" class="login-top-btn">REGÍSTRATE</a>
                 <span class="login-no-account"> ¿Aún no tienes cuenta?</span>
