--- a/legal/terminos.html
+++ b/legal/terminos.html
@@ -132,7 +132,7 @@
             <h3 class="footer-section-title">Enlaces Rápidos</h3>
             <ul class="footer-links">
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="eventos.html">Eventos</a></li>
+                <li><a href="dashboard.html">Eventos</a></li>
                 <li><a href="crear.html">Crear Evento</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
