Run And Eat (Cambios para mejorar enlaces entre paginas)

--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run and Eat - Dashboard</title>
-    <link rel="stylesheet" href="/run_eat/style/styles.css">
+    <link rel="stylesheet" href="style/styles.css" />
 </head>
 <body class="dashboard-body">
 
@@ -78,7 +78,7 @@
                         <h3 class="dashboard-event-title">Evento 1</h3>
                         <p class="dashboard-event-description">Local con hamburguesas artesanas y opciones veganas. Buena música y precios razonables. Usar Run and Eat me ayudó a decidirme y reservar sin complicaciones.</p>
                         <div class="dashboard-event-rating">★★★★☆</div>
-                        <button class="dashboard-event-btn">Button</button>
+                        <a href="evento.html"class="btn-event">Ver evento</a>
                     </div>
                 </div>
 
@@ -88,7 +88,7 @@
                         <h3 class="dashboard-event-title">Evento 1</h3>
                         <p class="dashboard-event-description">Local con hamburguesas artesanas y opciones veganas. Buena música y precios razonables. Usar Run and Eat me ayudó a decidirme y reservar sin complicaciones.</p>
                         <div class="dashboard-event-rating">★★★★☆</div>
-                        <button class="dashboard-event-btn">Button</button>
+                        <a href="evento.html"class="btn-event">Ver evento</a>
                     </div>
                 </div>
 
@@ -98,7 +98,7 @@
                         <h3 class="dashboard-event-title">Evento 1</h3>
                         <p class="dashboard-event-description">Local con hamburguesas artesanas y opciones veganas. Buena música y precios razonables. Usar Run and Eat me ayudó a decidirme y reservar sin complicaciones.</p>
                         <div class="dashboard-event-rating">★★★★☆</div>
-                        <button class="dashboard-event-btn">Button</button>
+                        <a href="evento.html"class="btn-event">Ver evento</a>
                     </div>
                 </div>
 
@@ -108,7 +108,7 @@
                         <h3 class="dashboard-event-title">Evento 1</h3>
                         <p class="dashboard-event-description">Local con hamburguesas artesanas y opciones veganas. Buena música y precios razonables. Usar Run and Eat me ayudó a decidirme y reservar sin complicaciones.</p>
                         <div class="dashboard-event-rating">★★★★☆</div>
-                        <button class="dashboard-event-btn">Button</button>
+                        <a href="evento.html"class="btn-event">Ver evento</a>
                     </div>
                 </div>
 
@@ -118,7 +118,7 @@
                         <h3 class="dashboard-event-title">Evento 1</h3>
                         <p class="dashboard-event-description">Local con hamburguesas artesanas y opciones veganas. Buena música y precios razonables. Usar Run and Eat me ayudó a decidirme y reservar sin complicaciones.</p>
                         <div class="dashboard-event-rating">★★★★☆</div>
-                        <button class="dashboard-event-btn">Button</button>
+                        <a href="evento.html"class="btn-event">Ver evento</a>
                     </div>
                 </div>
 
@@ -128,7 +128,7 @@
                         <h3 class="dashboard-event-title">Evento 1</h3>
                         <p class="dashboard-event-description">Local con hamburguesas artesanas y opciones veganas. Buena música y precios razonables. Usar Run and Eat me ayudó a decidirme y reservar sin complicaciones.</p>
                         <div class="dashboard-event-rating">★★★★☆</div>
-                        <button class="dashboard-event-btn">Button</button>
+                        <a href="evento.html"class="btn-event">Ver evento</a>
                     </div>
                 </div>
 
@@ -138,7 +138,7 @@
                         <h3 class="dashboard-event-title">Evento 1</h3>
                         <p class="dashboard-event-description">Local con hamburguesas artesanas y opciones veganas. Buena música y precios razonables. Usar Run and Eat me ayudó a decidirme y reservar sin complicaciones.</p>
                         <div class="dashboard-event-rating">★★★★☆</div>
-                        <button class="dashboard-event-btn">Button</button>
+                        <a href="evento.html"class="btn-event">Ver evento</a>
                     </div>
                 </div>
 
@@ -148,7 +148,7 @@
                         <h3 class="dashboard-event-title">Evento 1</h3>
                         <p class="dashboard-event-description">Local con hamburguesas artesanas y opciones veganas. Buena música y precios razonables. Usar Run and Eat me ayudó a decidirme y reservar sin complicaciones.</p>
                         <div class="dashboard-event-rating">★★★★☆</div>
-                        <button class="dashboard-event-btn">Button</button>
+                        <a href="evento.html"class="btn-event">Ver evento</a>
                     </div>
                 </div>
 
