--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     sin complicaciones.
                 </p>
                 <div class="VALORACION">⭐⭐⭐⭐☆</div>
-                <button class="btn-event">VER EVENTO</button>
+                <a href="evento.html"class="btn-event">Ver evento</a>
             </div>
         </div>
     </main>
