Run And Eat (Ajustes de estilo en la pagina contacto)

--- a/contacto.html
+++ b/contacto.html
@@ -69,7 +69,7 @@
 
             <div class="contacto-info-section">
                 <div class="contacto-info-text">
-                    <h2 class="contacto-info-title">RUN & EAT</h2>
+                    <img src="img/run.png" alt="RUN & EAT" class="logo-text" />
                     <p class="contacto-info-slogan">"Corre. Come. Repite"</p>
                 </div>
 
