RUN AND EAT (Eliminar Boton SALIR en todas las paginas)

--- a/dashboard.html
+++ b/dashboard.html
@@ -22,14 +22,14 @@
             </div>
 
             <div class="dashboard-category-filters">
-                <button class="dashboard-category-btn active">Vegana</button>
-                <button class="dashboard-category-btn">Regional</button>
-                <button class="dashboard-category-btn">Repostería</button>
-                <button class="dashboard-category-btn">Coctelerías</button>
-                <button class="dashboard-category-btn">Comida rápida</button>
-                <button class="dashboard-category-btn">Catas</button>
-                <button class="dashboard-category-btn">Vinotecas</button>
-                <button class="dashboard-category-btn">Lujo</button>
+                <button class="dashboard-category-btn active">Turquia</button>
+                <button class="dashboard-category-btn">España</button>
+                <button class="dashboard-category-btn">Filipinas</button>
+                <button class="dashboard-category-btn">Pakistan</button>
+                <button class="dashboard-category-btn">Republica Dominicana</button>
+                <button class="dashboard-category-btn">Perú</button>
+                <button class="dashboard-category-btn">Francia</button>
+                <button class="dashboard-category-btn">Itali</button>
             </div>
 
             <div class="dashboard-price-section">
@@ -52,7 +52,7 @@
                 <p class="dashboard-subtitle">Eventos en tu zona</p>
                 <div class="user-header-right">
             <a href="user.html" ><img src="img/user.png" alt="User" class="user-header-icon"> </a>
-            <a href="index.html" class="user-logout-btn">SALIR</a>
+          
         </div>
             </div>
 
