RUN AND EAT (añadido icono de nuestro logo en la pestaña)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Run and Eat - Eventos Gastronómicos</title>
     <link rel="stylesheet" href="style/styles.css" />
+    <link rel="icon" href="img/logo.png" type="image/png">
+    <link rel="apple-touch-icon" href="img/logo.png">
+
 </head>
 
 <body>
@@ -22,10 +25,10 @@
         </div>
 
         <div class="header-center">
-    <a href="index.html">
-        <img src="img/logo.png" alt="Run and Eat Logo" class="logo-burger" />
-    </a>
-</div>
+            <a href="index.html">
+                <img src="img/logo.png" alt="Run and Eat Logo" class="logo-burger" />
+            </a>
+        </div>
 
         <div class="header-right">
             <a href="registrer.html " class="btn-registro">REGISTRO</a>
@@ -35,7 +38,7 @@
 
     <div class="organizer-section">
         <a href="crear.html" class="organizer-link">Eres organizador?</a>
-        <a href="crear.html"class="btn-crear">Crear evento</a>
+        <a href="crear.html" class="btn-crear">Crear evento</a>
     </div>
 
     <div class="search-section">
@@ -52,13 +55,13 @@
             <div class="event-content">
                 <h3 class="titulo-evento">Evento 1</h3>
                 <p class="descripcion-evento">
-                    Local con hamburguesas artesanas y opciones veganas. 
-                    Buena música y precios razonables. 
+                    Local con hamburguesas artesanas y opciones veganas.
+                    Buena música y precios razonables.
                     Usar Run and Eat me ayudó a decidirme y reservar
                     sin complicaciones.
                 </p>
                 <div class="VALORACION">⭐⭐⭐⭐☆</div>
-                <a href="evento.html"class="btn-event">Ver evento</a>
+                <a href="evento.html" class="btn-event">Ver evento</a>
             </div>
         </div>
     </main>
