--- a/login.html
+++ b/login.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run and Eat - Iniciar Sesión</title>
-    <link rel="stylesheet" href="style/styles.css">
+   <link rel="stylesheet" href="style/styles.css">
+    <link rel="icon" href="img/logo.png" type="image/png">
+    <link rel="apple-touch-icon" href="img/logo.png">
+
 </head>
 
 <body class="login-body">
