--- a/registrer.html
+++ b/registrer.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run and Eat - Registro</title>
-    <link rel="stylesheet" href="style/styles.css">
+   <link rel="stylesheet" href="style/styles.css">
+    <link rel="icon" href="img/logo.png" type="image/png">
+    <link rel="apple-touch-icon" href="img/logo.png">
+
+
 </head>
 
 <body class="login-body">
@@ -23,7 +27,7 @@
 
         <div class="user-header-right">
             <a href="user.html"><img src="img/user.png" alt="User" class="user-header-icon"> </a>
-         
+
         </div>
     </div>
 
