--- a/crear.html
+++ b/crear.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run and Eat - Creación de Eventos</title>
-    <link rel="stylesheet" href="style/styles.css">
+   <link rel="stylesheet" href="style/styles.css">
+    <link rel="icon" href="img/logo.png" type="image/png">
+    <link rel="apple-touch-icon" href="img/logo.png">
+
+    
+
 </head>
 
 <body>
@@ -26,7 +31,7 @@
 
         <div class="user-header-right">
             <a href="user.html"><img src="img/user.png" alt="User" class="user-header-icon"> </a>
-          
+
         </div>
     </header>
 
