--- a/legal/privacidad.html
+++ b/legal/privacidad.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run and Eat - Política de Privacidad</title>
-    <link rel="stylesheet" href="style/styles.css">
+   <link rel="stylesheet" href="style/styles.css">
+    <link rel="icon" href="img/logo.png" type="image/png">
+    <link rel="apple-touch-icon" href="img/logo.png">
+
 </head>
 <body class="legal-body">
 
