--- a/user.html
+++ b/user.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Run and Eat - Mi Perfil</title>
     <link rel="stylesheet" href="style/styles.css" />
+    <link rel="icon" href="img/logo.png" type="image/png">
+    <link rel="apple-touch-icon" href="img/logo.png">
+
 </head>
 
 <body class="user-body">
