RUN AND EAT (RESPONSIVE EVENTOS y pequeños cambios)

--- a/dashboard.html
+++ b/dashboard.html
@@ -34,7 +34,7 @@
                 <button class="dashboard-category-btn">Republica Dominicana</button>
                 <button class="dashboard-category-btn">Perú</button>
                 <button class="dashboard-category-btn">Francia</button>
-                <button class="dashboard-category-btn">Itali</button>
+                <button class="dashboard-category-btn">Italia</button>
             </div>
 
             <div class="dashboard-price-section">
